--- a/scss/layout/_popular.scss
+++ b/scss/layout/_popular.scss
@@ -30,7 +30,7 @@
     
             span{
                 background-color: #fff;
-                color: var(--main-color);
+                color: $main-color;
                 font-size: 2rem;
                 padding: 1rem;
                 margin: 1rem;
