--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -1,10 +1,10 @@
 $main-color: #d3ad7f;
 $black: #13131a;
-$bg:#010103;
-$border: .1rem solid rgba(255,255,255,.3);
+$bg: #010103;
+$border: 0.1rem solid rgba(255, 255, 255, 0.3);
 
 /* redes sociales */
 
-$facebook:#3b5999;
-$whatssap:#128C7E;
-$milanuncios:#25D366;
+$facebook: #3b5999;
+$whatssap: #128c7e;
+$milanuncios: #25d366;
