--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -1,23 +1,23 @@
-*{
-    font-family: 'Oswald', sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    outline: none;
-    border: none;
-    text-decoration: none;
-    transition: .2s linear;
+* {
+  font-family: "Oswald", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: none;
+  border: none;
+  text-decoration: none;
+  transition: 0.2s linear;
 }
 
-html{
-    background: $bg;
-    width: 100%;
-    font-size: .6rem;
-    overflow-x: hidden;
-    scroll-padding-top: 9rem;
-    scroll-behavior: smooth;
+html {
+  background: $bg;
+  width: 100%;
+  font-size: 0.6rem;
+  overflow-x: hidden;
+  scroll-padding-top: 9rem;
+  scroll-behavior: smooth;
 }
 
-section{
-    padding: 2rem 7%;
+section {
+  padding: 2rem 7%;
 }
