--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,67 +1,95 @@
-header{
-    @include propiedades-flex(space-between,center);
-    width: 100%;
-    background: rgb(9,9,121);
-    background: linear-gradient(90deg, rgba(9,9,121,0) 0%, rgba(136,136,136,0.2) 35%, rgba(136,136,136,0.2) 100%);
-    position: fixed;
-    padding: 4rem 2%;
-    top: 0; 
-    right: 0;
-    z-index: 1000;
+header {
+  @include propiedades-flex(space-between, center);
+  width: 100%;
+  background: linear-gradient(
+    90deg,
+    rgba(9, 9, 121, 0) 0%,
+    rgba(136, 136, 136, 0.2) 35%,
+    rgba(136, 136, 136, 0.2) 100%
+  );
+  position: fixed;
+  padding: 4rem 2%;
+  top: 0;
+  right: 0;
+  z-index: 1000;
 }
 
-.logo-container{
-    @include propiedades-flex(center,center);
-    margin: 3rem 3rem;
-    width: 15rem;
-    height: 15rem;
-    position: fixed;
-    z-index: 1001;
+.logo-container {
+  @include propiedades-flex(center, center);
+  margin: 3rem 3rem;
+  width: 15rem;
+  height: 15rem;
+  position: fixed;
+  z-index: 1001;
 
-    a{
-        img{
-            position: absolute;
-            width: 100%;
-            height: 100%;
-        }
-    } 
+  a {
+    img {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+    }
+  }
 }
 
-.navbar{
-    @include propiedades-flex(flex-end,stretch);
-    width: 85%;
+.navbar {
+  @include propiedades-flex(flex-end, stretch);
+  width: 85%;
+  position: relative;
+  flex-wrap: wrap;
+
+  a {
+    margin: 0 5rem;
+    font-size: 2rem;
+    color: #fff;
+    font-family: "Oswald", sans-serif;
     position: relative;
-    flex-wrap: wrap;
-    
-    a{
-        margin: 0 5rem;
-        font-size: 2rem;
-        color: #fff;
-        font-family: 'Oswald', sans-serif;
-        position: relative;
-        &:hover{
-            color: $main-color;
-            border-bottom: solid $main-color;
-        }
+    &:hover {
+      color: $main-color;
+      border-bottom: solid $main-color;
     }
+    
+  }
 }
 
-
-
-.icons{
-    display: flex;
-    margin-right: 1rem;
+.icons {      
+  display: grid;
+  justify-content: flex-end;
+  margin-right: 1rem;
+  width: 10%;
+  
+  
+  div {
+    position: relative;
+    display: inline-block;
+    color: #fff;
+    font-size: 2.5rem;
+    margin-left: 2rem;
     
-    div{
-        position: relative;
-        display: inline-block;
-        color: #fff;
-        cursor: pointer;
-        font-size: 2.5rem;
-        margin-left: 2rem;
-    
-        &:hover{
-            color: $main-color;
-        }
+    &:hover {
+      cursor: pointer;
+      color: $main-color;
     }
+  }
+  
+  .nav_icon{
+    display: none;
+  }
+
+  .nav_menu, .nav_input{
+    display: none;
+  }
+
+  .nav_cart{
+    grid-column: -2/-1;
+    grid-row: 1/2;
+  }
+      
+  .nav__hamburguer{
+    grid-column: 2/1;
+    grid-row: 1/2;
+  }
+
 }
+
+      
+
